@@ -1,3 +1,5 @@
+Fixed bug found by Aditya: The top panel retains the old images when I click on other album and ends up showing images from both the albums.
+Fixed bug found by Aditya: When I expand the album tree on the LHS and click on directly on the image name then the full size image gets displayed correctly on RHS but the other panel which opens at the top is blank. This panel should display all the images from the selected image's album.
 The picture adder now generates unique filenames when pictures are added which have the same name as previous added pictures
 The UI picturelist is now only updated when the user selects an other album then the currenty selected one
 Fixed a bug were deleted pictures were also always deleted from the UI picturelist also when that picture's album was not the selected one at the time of deletion
